--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img
+      src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+      alt="A Lion with its jaws widw open"
+      title="Lion the King of the jungle"
+    />
+    <img
+      src="input-onlinejpgtools (1).jpg"
+      alt="A Chocolate cake served in a plate"
+      title="A Chocolate Cake"
+    />
+    <img
+      src="input-onlinejpgtools.jpg"
+      alt="A Picture of a Cosmos Sulphureus flower"
+      title="A Cosmos Sulphureus"
+    />
   </body>
 </html>
